Actions
Bug #14319
closedld shouldn't warn about SHF_EXCLUDE unknown sections
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
If we encounter a section with an unknown type in the OS specific range, we current emit a warning, but move on with it anyway:
ld: warning: file obj64/modhash.o: section [18].llvm_addrsig has invalid type 0x6fff4c03
If that section is flagged SHF_EXCLUDE, we're being told that the link-editor may or should not process it, and so there's no reason for us to emit a warning (it will still be passed through into output relocatable objects, however)
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 7c46107350cb9215d4a4b9e371541fbfa02abdb4
commit 7c46107350cb9215d4a4b9e371541fbfa02abdb4 Author: Richard Lowe <richlowe@richlowe.net> Date: 2022-01-06T21:14:59.000Z 14319 ld shouldn't warn about SHF_EXCLUDE unknown sections Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions