14319 ld shouldn't warn about SHF_EXCLUDE unknown sections Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>